--- a/style/global.css
+++ b/style/global.css
@@ -124,6 +124,50 @@ main {
 	max-width: 200px;
 }
 
+#scroll-selector{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+
+	width: 100%;
+	height: 100%;
+
+	background: rgba(255, 255, 255, 1);
+}
+
+#ss-list {
+	padding: 0;
+	margin: 0;
+
+	transition: margin-top 0.1s;
+}
+.ss-item {
+	list-style-type: none;
+	/*
+	margin-top: 10px;
+	margin-bottom: 10px;
+	*/
+	max-width: 100vw;
+
+	transition: background 0.382s, color 0.1s;
+}
+.ss-item div {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.ss-item span {
+	font-size: x-large;
+	font-family: 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+
+	border-radius: 200px;
+	padding: 2px 10px 2px 10px;
+}
+
+.current{
+	background: darkred;
+	color: white;
+}
+
 ::-webkit-scrollbar {
 	width: 6px;
 	height: 8px;
