bp-core.md 	更新了文档
bm.css
	做了些微调

bm.js
	bm-item的title属性支持DOM或者PureObject
	如果是DOM的话则将其设置为 $c tag
	如果是PureObject的话则将其设置为 $c html

	items.title 的数据绑定

bp-stream.js
	适配新的插件机制

cd.js
	似乎只是改了个版本

core.js
	BP.prototype.next 改成了受播放模式影响

	架构大改，不应该放在 BP.prototype 的都移动到构造函数里

	BPList.prototype.supportPlayMode 的加入

	新的插件机制（由于大改的原因）

frame.js
	About 类的加入

	contextMenu 类的加入

	frame的版本升到 0.2.0（貌似第一次写上version信息）

global.css
	main 加入了 transform: rotate(0deg); 这样没意义的CSS（（（（
	其实是为了提升显示性能

	字体微调

	menu相关的CSS加入

	about相关的CSS加入

index.html
	删除 tool.js 的引用
	加入 bm.css 的引用
	加入cd.js、bm.js的引用

	写了个 id为about 的div

--- a/script/bm.css
+++ b/script/bm.css
@@ -7,14 +7,13 @@
 	top: 300px;
 	left: 300px;
 
-	min-width: 192px;
-	max-width: 300px;
+	width: 192px;
 
 	background: rgba(255, 255, 255, 0.97);
 
 	border-radius: 4px;
 
-	box-shadow: 0px 1px 4px #333;
+	box-shadow: 0px 1px 4px #999;
 
 	padding-top: 5px;
 	padding-bottom: 5px;
@@ -25,7 +24,10 @@
 	color: white;
 }
 .bm-menu-click{
-
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 
 .bm-menu-lock{
@@ -44,10 +46,10 @@
 	-ms-user-select:none;
 	user-select:none;
 
-	font-family: 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-family: Arial, 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-size: small;
 
 	border: 0;
-
 	border-bottom: 1px solid #eee;
 
 	padding-top: 3px;
@@ -61,7 +63,8 @@
 .bm-menu-column{
 	display: flex;
 
-	justify-content: center;
+	justify-content: space-around;
+	align-items: center;
 }
 .bm-menu-column .bm-menu-item{
 	border: 0;
