--- a/style/global.css
+++ b/style/global.css
@@ -18,6 +18,9 @@ main {
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+
+	transform: rotate(0deg);
+	transition: -webkit-filter 2s;
 }
 #cover{
 	position: relative;
@@ -55,7 +58,7 @@ main {
 	/* margin-bottom: 70px; */
 	/* font-stretch: condensed; */
 	/* font-weight: 100; */
-	font-family: 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-family: 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
 	/* font-stretch: extra-condensed; */
 	text-align: center;
 }
@@ -73,7 +76,7 @@ main {
 #artist {
 	font-stretch: condensed;
 	font-weight: 100;
-	font-family: Tahoma, 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-family: Tahoma, 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
 	/* width: calc(100% / 2); */
 	color: darkred;
 	/* margin: 0; */
@@ -93,7 +96,7 @@ main {
 #album {
 	font-stretch: condensed;
 	font-weight: 100;
-	font-family: 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-family: 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
 	color: darkred;
 	/* width: 256px; */
 	text-align: right;
@@ -157,7 +160,7 @@ main {
 }
 .ss-item span {
 	font-size: x-large;
-	font-family: 'Hiragino Sans GB', DengXian, 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-family: 'Hiragino Sans GB', DengXian, '微软雅黑', 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
 
 	border-radius: 200px;
 	padding: 2px 10px 2px 10px;
@@ -166,6 +169,76 @@ main {
 .current{
 	background: darkred;
 	color: white;
+}
+
+
+.bm-menu-lock{
+	-webkit-user-select: initial !important;
+	-moz-user-select: none !important;
+	-ms-user-select: none !important;
+	user-select: none !important;
+}
+#playmode:hover{
+	color: white;
+}
+#playmode{
+	font-family: Arial;
+	width: 38.2%;
+	font-size: 12px;
+	text-align: center;
+	color: yellowgreen;
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.play-control{
+	font-family: cursive !important;
+}
+#about *{
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+}
+#about h1 {
+	color: azure;
+	font-size: 100;
+	font-size: 96px;
+	opacity: 1;
+	width: 100%;
+	text-align: center;
+	transition: opacity 3.618s;
+	opacity: 0.72;
+	font-weight: lighter;
+	font-family: "Agency FB", Arial;
+}
+#about span {
+	font-size: xx-small;
+	font-weight: lighter;
+	color: antiquewhite;
+	font-family: Arial, 微软雅黑, Helvetica;
+}
+#about{
+	display: none;
+	opacity: 0;
+
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.618) !important;
+
+	cursor: none;
+
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+	transform: rotate(0deg);
 }
 
 ::-webkit-scrollbar {
