--- a/style/global.css
+++ b/style/global.css
@@ -8,17 +8,14 @@ html, body{
 	position: absolute;
 }
 body{
-	display: flex;
-	justify-content: center;
+	overflow: hidden;
 }
 main {
-	height: 100%;
-	width: 640px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-
+	height: 100%;
 	transform: rotate(0deg);
 	transition: -webkit-filter 2s;
 }
@@ -45,21 +42,10 @@ main {
 
 #info {
 	max-width: 100%;
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* align-items: center; */
-	/* justify-content: space-around; */
-	/* margin: auto; */
-	/* width: inherit; */
-	/* overflow-x: scroll; */
 	min-width: calc(100% / 2);
 }
 #title {
-	/* margin-bottom: 70px; */
-	/* font-stretch: condensed; */
-	/* font-weight: 100; */
 	font-family: 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
-	/* font-stretch: extra-condensed; */
 	text-align: center;
 }
 
@@ -77,9 +63,7 @@ main {
 	font-stretch: condensed;
 	font-weight: 100;
 	font-family: Tahoma, 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
-	/* width: calc(100% / 2); */
 	color: darkred;
-	/* margin: 0; */
 	text-align: left;
 }
 
@@ -98,10 +82,7 @@ main {
 	font-weight: 100;
 	font-family: 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
 	color: darkred;
-	/* width: 256px; */
 	text-align: right;
-	/* width: calc(100% / 2); */
-	/* margin: 0; */
 }
 
 #progress{
@@ -146,10 +127,7 @@ main {
 }
 .ss-item {
 	list-style-type: none;
-	/*
-	margin-top: 10px;
-	margin-bottom: 10px;
-	*/
+
 	max-width: 100vw;
 
 	transition: background 0.382s, color 0.1s;
@@ -234,11 +212,110 @@ main {
 	cursor: none;
 
 	display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
 	transform: rotate(0deg);
+}
+
+#setting{
+	display: none;
+	opacity: 0;
+
+	position: fixed;
+
+	top: 300px;
+	left: 100px;
+
+	width: 192px;
+
+	background: rgba(255, 255, 255, 0.97);
+
+	border-radius: 4px;
+
+	box-shadow: 0px 1px 4px #999;
+
+	padding-top: 8px;
+	padding-bottom: 8px;
+}
+#config{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	/* align-items: flex-end; */
+	height: 100px;
+}
+#config *{
+	font-family: Arial, 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+}
+#config > label{
+	display: block;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+
+	font-family: Arial, 'Hiragino Sans GB', DengXian, "微软雅黑", 'WenQuanYi Microhei', 'Microsoft yahei light', 黑体;
+	font-size: small;
+
+	border: 0;
+	border-bottom: 1px solid #eee;
+
+	padding-top: 3px;
+	padding-bottom: 3px;
+	padding-left: 10px;
+	padding-right: 10px;
+
+	cursor: context-menu;
+}
+
+#config input[type]{
+	width: 20px;
+}
+#config input#progresssize {
+	border: 0;
+	border-bottom: solid 1px #bbb;
+	outline: none;
+	margin: 0px 3px 0px 4px;
+	text-align: center;
+}
+
+
+#config .setting-control{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+#config input[type="submit"]:hover, #config button:hover{
+	background: darkred;
+	color: white;
+}
+#config input[type="submit"]{
+	color: black;
+	text-align: center;
+
+	border: solid 1px #bbb;
+	background: white;
+
+	width: 48px;
+
+	transition: color 0.618s, background 0.618s;
+
+	outline: none;
+}
+#config button{
+	color: black;
+	text-align: center;
+
+	border: solid 1px #bbb;
+	background: white;
+
+	width: 48px;
+
+	transition: color 0.618s, background 0.618s;
+
+	outline: none;
 }
 
 ::-webkit-scrollbar {
