--- a/style/global.css
+++ b/style/global.css
@@ -174,6 +174,9 @@ main {
 .play-control{
 	font-family: cursive !important;
 }
+.play-or-pause{
+	font-family: "黑体" !important;
+}
 #about *{
 	-webkit-user-select:none;
 	-moz-user-select:none;
